Add EditorUserSettings to .gitignore.

--- a/GMTKJamProject/.gitignore
+++ b/GMTKJamProject/.gitignore
@@ -61,3 +61,4 @@ crashlytics-build.properties
 # Unity generated
 UserSettings/Layouts
 UserSettings/Search.settings
+UserSettings/EditorUserSettings.asset
